<resources>
    <string name="app_name">GitUser</string>
    <string name="dummyUsername">JakeWharton</string>
    <string name="dummy_name">Jake Wharton</string>
    <string name="dummy_company">Google, inc</string>
    <string name="dummy_location">California</string>
    <string name="title_repository">Repository</string>
    <string name="title_toolbar">GitHub User</string>
    <string name="back">arrow button</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="btn_github">open in github</string>
    <string name="more">… more</string>
    <string name="less">less</string>
    <string name="repo">repo</string>
    <string name="image">image</string>
    <string name="hint_search">type their username</string>
    <string name="title_favorite_fragment">Your Favorite user</string>
    <string name="title_fragment_search">Find Your Favorite user</string>
    <string name="something_wrong">something wrong</string>
    <string name="try_again">Try Again</string>
    <string name="no_data_found">No data found!</string>
    <string name="welcome">welcome</string>
    <string name="username">type here …</string>
    <string name="text_welcome">Enter your github username</string>
    <string name="txt_continue">continue</string>
    <string name="head_title_welcome">Welcome</string>
    <string name="title_username">username</string>
    <string name="alarm_text_ON">Alarm at 09:00 AM (ON)</string>
    <string name="alarm_text_OFF">Alarm at 09:00 AM (OFF)</string>
    <string name="change">change</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="please_enter_again">Please Enter Again</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_username_not_found">Your username not found!</string>
    <string name="settings">Settings</string>
    <string name="close">close</string>
    <string name="dummy_url">www.github.com</string>
    <string-array name="tab_title">
        <item>Repos</item>
        <item>Followers</item>
        <item>Following</item>
    </string-array>
</resources>