<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_black"
        android:theme="@style/Theme.GitUser">

        <ImageButton
            android:id="@+id/btn_back_profile_settings"
            android:layout_width="50dp"
            android:layout_height="@dimen/sizeAuto"
            android:background="@color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_left_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/sizeAuto"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/title_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_back_profile_settings"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username_profile_setting"
            android:layout_width="@dimen/sizeAuto"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/spaceSpecial"
            android:background="@null"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="@dimen/paddingNormal"
            android:hint="@string/title_username"
            android:imeOptions="actionDone"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHighlight="@color/secondary_white"
            android:textColorHint="@color/secondary_white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_change_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageButton
            android:id="@+id/btn_change_username"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/spaceSpecial"
            android:background="@color/transparent"
            android:contentDescription="@string/change"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_change"
            app:layout_constraintBottom_toBottomOf="@+id/et_username_profile_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_username_profile_setting" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_alarm"
            android:layout_width="@dimen/sizeAuto"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/spaceSpecial"
            android:drawableStart="@drawable/ic_alarm"
            android:drawablePadding="@dimen/paddingNormal"
            android:switchPadding="@dimen/spaceMax"
            android:textColor="@color/white"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:textSize="18sp"
            android:thumbTint="@color/white"
            android:trackTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username_profile_setting"
            app:useMaterialThemeColors="true"
            tools:text="@string/alarm_text_OFF" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>